<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/black"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginRight="16dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:fontFamily="@font/roboto_italic"
                android:text="@string/welcome"
                android:textColor="#FFFFFF"
                android:textSize="54sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/forever_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    android:layout_weight="1"
                    android:background="@drawable/my_background2"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/list_item_icon"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:background="@android:color/white"
                        android:contentDescription="@string/todo"
                        android:src="@drawable/one" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:layout_marginTop="20dp"
                        android:text="@string/forever"
                        android:textColor="@android:color/white" />


                </LinearLayout>

                <LinearLayout
                    android:id="@+id/trendings_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_weight="1"
                    android:background="@drawable/my_background2"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:contentDescription="@string/todo"
                        android:src="@drawable/two" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:layout_marginTop="20dp"
                        android:text="@string/trending_music"
                        android:textColor="@android:color/white" />


                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/latests_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    android:layout_weight="1"
                    android:background="@drawable/my_background2"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:contentDescription="@string/todo"
                        android:src="@drawable/three" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:layout_marginTop="20dp"
                        android:text="@string/latest"
                        android:textColor="@android:color/white" />


                </LinearLayout>

                <LinearLayout
                    android:id="@+id/playlists_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_weight="1"
                    android:background="@drawable/my_background2"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:contentDescription="@string/todo"
                        android:src="@drawable/four" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:layout_marginTop="20dp"
                        android:text="@string/playlist"
                        android:textColor="@android:color/white" />


                </LinearLayout>


            </LinearLayout>


            <LinearLayout
                android:id="@+id/forever_id2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="160dp"
                    android:layout_height="160dp"
                    android:contentDescription="@string/todo"
                    android:scaleType="centerCrop"
                    android:src="@drawable/one" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="18dp"
                        android:text="@string/forever"
                        android:textColor="#FFFF"
                        android:textSize="26sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="18dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/the_album_contains_top_100_most_streamed_songs_on_nsMusics_app_with_streams_rounded_to_the_nearest_million"
                        android:textColor="#FFFF"
                        android:textSize="12sp"
                        android:textStyle="italic" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/trendings_id2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="160dp"
                    android:layout_height="160dp"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/two"
                    android:scaleType="centerCrop"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="18dp"
                        android:text="@string/trending_music"
                        android:textColor="#FFFF"
                        android:textSize="26sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="18dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/the_album_contains_trending_songs_of_nsMusics_app_this_album_updates_every_week_according_to_the_trend"
                        android:textColor="#FFFF"
                        android:textSize="12sp"
                        android:textStyle="italic" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/latests_id2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="160dp"
                    android:layout_height="160dp"
                    android:contentDescription="@string/todo"
                    android:scaleType="centerCrop"
                    android:src="@drawable/three" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="18dp"
                        android:text="@string/latest"
                        android:textColor="#FFFF"
                        android:textSize="26sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="18dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/the_album_contains_top_20_most_streamed_songs_of_latests_of_nsMusics_app"
                        android:textColor="#FFFF"
                        android:textSize="12sp"
                        android:textStyle="italic" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/playlists_id2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="32dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="160dp"
                    android:layout_height="160dp"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/four"
                    android:scaleType="centerCrop"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="18dp"
                        android:text="@string/playlist"
                        android:textColor="#FFFF"
                        android:textSize="26sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="18dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/this_is_customizable_playlist_choose_your_favourite_songs_out_of_millions_in_nsMusics_app"
                        android:textColor="#FFFF"
                        android:textSize="12sp"
                        android:textStyle="italic" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>